@@ -1,3 +1,8 @@
+Fri Aug 29 15:57:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add workaround for a bug in the
+	  tagspy.
+
 Fri Aug 29 14:51:20 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/fieldactions.py: Handle repeated adding of sort or facet
